--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Tienda de Bebidas</h1>
-        <nav>
+        <nav class="filters-container">
             <button id="filter-beer">Cerveza</button>
             <button id="filter-wine">Vino</button>
             <button id="filter-aperitif">Aperitivo</button>
