--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
             <button id="checkout">Finalizar Compra</button>
         </section>
     </main>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
     <script src="js/app.js"></script>
 </body>
 
